# mybot_ros

./: Run_note  mybot_Arduino_ROS_no_slam  mybot_Arduino_ROS_with_slam
src/mbx1/mbx1/: CMakeLists.txt  package.xml
src/mbx1/mbx1_description/: CMakeLists.txt  package.xml
src/mbx1/mbx1_description/launch/mybot/: my_robot_with_xtion.launch
src/mbx1/mbx1_description/urdf/my_robot/: base.urdf.xacro  my_robot_base_only.xacro  my_robot_with_xtion _hector.xacro  my_robot_with_xtion.xacro  my_robot_with_xtion_hector.xacro  xtion.urdf.xacro
src/rbx1/rbx1/: package.xml
src/rbx1/rbx1_bringup/launch/: fake_laser.launch  fake_laser2.launch
src/rbx1/rbx1_nav/: fake_laser.rviz  rpi_openni2.rviz
src/rbx1/rbx1_nav/config/fake/: base_local_planner_params.yaml
src/rbx1/rbx1_nav/config/my_bot/: base_local_planner_params.yaml
src/rbx1/rbx1_nav/launch/: gmapping_demo_mybot.launch  mybot_demo_amcl.launch  mybot_move_base.launch  mybot_move_base_blank_map.launch
src/rbx1/rbx1_nav/maps/: my_map_bag.pgm  my_map_bag.yaml  mybot_map_1.pgm  mybot_map_1.yaml
src/rbx1/rbx1_nav/nodes/: move_base_mybot.py  move_base_square.py  nav_test.py  odom_out_and_back.py  timed_out_and_back.py
src/ros_arduino_bridge/: README.md
src/ros_arduino_bridge/ros_arduino_bridge/: package.xml
src/ros_arduino_bridge/ros_arduino_python/config/: my_arduino_params.yaml
src/ros_arduino_bridge/ros_arduino_python/launch/: arduino_state_pub.launch  arduino_urdf.launch  test_urdf.launch
src/ros_arduino_bridge/ros_arduino_python/nodes/: arduino_node.py
(+3 files in other folders)
